# cegla

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
cegla/: Cargo.toml
cegla-cgi/: Cargo.toml
cegla-cgi/src/: client.rs  lib.rs  server.rs
cegla-scgi/: Cargo.toml
cegla-scgi/src/: client.rs  lib.rs  server.rs
cegla/src/: lib.rs
cegla/src/client/: mod.rs  request.rs  response.rs
cegla/src/server/: mod.rs  request.rs  response.rs
examples/: Cargo.toml
examples/src/cgi/: client.rs  server.rs
examples/src/lowlevel/: client.rs  server.rs
examples/src/scgi/: client.rs  server.rs
tokio-cegla/: Cargo.toml
tokio-cegla/src/: cgi.rs  lib.rs  scgi.rs
