[workspace]
members = ["cegla", "cegla-cgi", "cegla-scgi", "examples", "tokio-cegla"]
resolver = "2"

[workspace.dependencies]
cegla = "=0.2.0"
cegla-cgi = "=0.2.0"
cegla-scgi = "=0.2.0"
tokio-cegla = "=0.2.0"
shiba = "0.1.1"

[patch.crates-io]
cegla = { path = "./cegla" }
cegla-cgi = { path = "./cegla-cgi" }
cegla-scgi = { path = "./cegla-scgi" }
tokio-cegla = { path = "./tokio-cegla" }

[workspace.metadata.cargo-shear]
ignored = ["shiba"]
