[package]
name = "tokio-cegla"
version = "0.2.0"
edition = "2021"
authors = ["Dorian Niemiec <dorian@ferron.sh>"]
description = "Tokio-based runtime support for `cegla-*` crates."
license = "MIT"
readme = "../README.md"
keywords = ["http", "cgi", "web"]
categories = ["web-programming", "network-programming"]
documentation = "https://docs.rs/tokio-cegla"
repository = "https://github.com/ferronweb/cegla"

[dependencies]
tokio = "1.49.0"
cegla-cgi = { workspace = true, optional = true }
cegla-scgi = { workspace = true, optional = true }

[dev-dependencies]
shiba = { workspace = true }

[features]
cgi-client = ["cegla-cgi", "cegla-cgi/client", "tokio/process", "tokio/rt"]
scgi-client = ["cegla-scgi", "cegla-scgi/client", "tokio/rt"]
